force-app/main/default/objects/pse__Backlog_Calculation__c/pse__Backlog_Calculation__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__BacklogCalculationHelp</customHelpPage>
    <description>Stores projected billings from projects over a period of time for regions, practices, and groups. Revenue data can come from billable assignments or milestones. Backlog calculations contain child backlog detail records, which contain the actual backlog data.</description>
    <label>Backlog Calculation</label>
    <nameField>
        <label>Backlog Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backlog Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>