force-app/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Calculate_Project_Backlog__c.field-meta.xml
<CustomField>
    <fullName>pse__Calculate_Project_Backlog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to calculate backlog for projects contained in the region, practice, or group.</description>
    <inlineHelpText>Whether to calculate backlog for projects contained in the region, practice, or group.</inlineHelpText>
    <label>Calculate Project Backlog</label>
    <type>Checkbox</type>
</CustomField>