force-app/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Is_Report_Master__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Report_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not currently used.</description>
    <label>Is Report Master</label>
    <type>Checkbox</type>
</CustomField>