force-app/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Reuse_Detail_Objects__c.field-meta.xml
<CustomField>
    <fullName>pse__Reuse_Detail_Objects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reuse Detail Objects</label>
    <type>Checkbox</type>
</CustomField>