force-app/main/default/objects/pse__Backlog_Calculation__c/fields/pse__Time_Period_Types__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period_Types__c</fullName>
    <description>The types of time periods to calculate backlog for. NOTE: these values should match the values for Time Period.Type</description>
    <label>Time Period Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>