force-app/main/default/objects/pse__Backlog_Calculation__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Error_Details__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>